--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-        <title>Eazel demo</title>
+        <title>Hotcakedemo</title>
     </head>
     <body>
         <h1>Hello World</h1>
         <script src="app.js"></script>
         <script src="index.js"></script>
         <script>
-            var ez = new Eazel({
-                targets: ['.', './index.js', './app.js'],
+            var hc = new Hotcake({
+                observe: ['.', './index.js', './app.js'],
                 interval: 5000
             })
         </script>
