--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-        <title>Hotcakedemo</title>
+        <title>Hotcake Demo</title>
     </head>
     <body>
-        <h1>Hello World</h1>
+        <h1>Hi World</h1>
         <script src="app.js"></script>
-        <script src="index.js"></script>
+        <script src="hotcake.js"></script>
         <script>
             var hc = new Hotcake({
-                observe: ['.', './index.js', './app.js'],
+                observe: ['.', './hotcake.js', './app.js'],
                 interval: 5000
-            })
+            });
         </script>
     </body>
 </html>
